src/test/resources/public/input/typechecking/fail/undeclared_id/fail02.jova
class Test{

}

class Main {

  public int main() {
    Test test;
    test = new Test;
    
    test.var = 1;
    
    return 0;
  }

}